@@ -164,7 +164,7 @@ module.exports = function (Server) {
         db.userLogin(name, pw, session, function (err, row) {
             if(err) {
                 if(err !== "Session expired")
-                    ActionLog.record(getIP(req), name, "login-failure");
+                    ActionLog.record(getIP(req), name, "login-failure", err);
                 res.jsonp({
                     success: false,
                     error: err
